[package]
name = "account_eventsourcing"
version = "0.1.0"
authors = ["rsb007 <rahul.sing@knoldus.in>"]
edition = "2018"

[dependencies]
eventsourcing = "0.1.1"
serde ="1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
eventsourcing-derive = "0.1.1"
cdrs = "2.0.0-beta.4"
cdrs_helpers_derive = '*'
json = "*"
uuid = { version = "0.7", features = ["v4"] }
